# peregrinus

./: .gitignore  AGENTS.md  Cargo.toml  INIT.md  LICENSE  README.md  TODO.md
.cargo/: config.toml
crates/saker-core/: Cargo.toml
crates/saker-core/src/: lib.rs
docs/: agent-environment.md
falco/: README.md  package.json
falco/app/: globals.css  layout.tsx  page.tsx  search-experience.tsx
services/saker/: Cargo.toml
services/saker/src/: config.rs  http.rs  main.rs
