[workspace]
members = [
    "crates/saker-core",
    "services/saker",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/pwyhack/peregrinus"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
saker-core = { path = "crates/saker-core" }
thiserror = "2.0"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
